--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "reactjs-popup": "^1.4.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.4",
     "redux-saga": "^1.0.5",
